Corrected some minor spelling mistakes

--- a/worst.html
+++ b/worst.html
@@ -61,7 +61,7 @@ of representing and asserting upon the user's view of the website.
 <p>If you insist, an advanced solution to capturing HTTP status codes is
 to replicate the behavior of Selenium RC by using a proxy.  WebDriver
 API provides the ability to set a proxy for the browser, and there are
-a number of proxies that programmatically allow you to manipulate the
+a number of proxies that pragmatically allow you to manipulate the
 contents of requests sent to and received from the web server.  Using
 a proxy lets you decide how you want to respond to redirection
 response codes.  Additionally, not every browser makes the response
@@ -81,7 +81,7 @@ important.
 in the case of Facebook the developer tools service which exposes an
 API for creating test accounts, friends and so forth. Although using
 an API might seem like a bit extra hard work you will be paid back in
-speed, reliabilty and stability. The API is also unlikely to change
+speed, reliability and stability. The API is also unlikely to change
 whereas webpages and HTML locators change often and require you to
 update your test framework.
 
