Corrected some minor spelling mistakes

--- a/worst.html
+++ b/worst.html
@@ -61,7 +61,7 @@ of representing and asserting upon the user's view of the website.
 <p>If you insist, an advanced solution to capturing HTTP status codes is
 to replicate the behavior of Selenium RC by using a proxy.  WebDriver
 API provides the ability to set a proxy for the browser, and there are
-a number of proxies that pragmatically allow you to manipulate the
+a number of proxies that programmatically allow you to manipulate the
 contents of requests sent to and received from the web server.  Using
 a proxy lets you decide how you want to respond to redirection
 response codes.  Additionally, not every browser makes the response
