Added a missing parenthesis

--- a/intro.html
+++ b/intro.html
@@ -311,7 +311,7 @@ UnicornConfirmationPage unicornConfirmationPage = addUnicornPage.createUnicorn(s
 
 <pre><code class=java>// The exists() method from UnicornConfirmationPage will take the Sparkles object--a specification of the attributes
 // you want to see, and compare them with the fields on the page
-Assert.assertTrue("Sparkles should have been created, with all attributes intact", unicornConfirmationPage.exists(sparkles);</code></pre>
+Assert.assertTrue("Sparkles should have been created, with all attributes intact", unicornConfirmationPage.exists(sparkles));</code></pre>
 
 <p>Note that the tester still hasn't done anything but talk about unicorns in this code–
  no buttons, no locators, no browser controls.
