Further explained why downloading files with Selenium is a bad idea

--- a/worst.html
+++ b/worst.html
@@ -24,10 +24,13 @@ around CAPTCHA checks:
 
 <h2>File Downloads</h2>
 
-<p>Whilst it is possible to start a download by clicking a link with a browser under Selenium&apos;s control -
-  the Selenium API does not currently expose download progress, making it less than idea for testing downloaded files.
-  Instead, find the link (and any required cookies) and pass it to a HTTP library.
-
+<p>Whilst it is possible to start a download by clicking a link with
+ a browser under Selenium's control - the API does not currently
+ expose download progress, making it less than idea for testing
+ downloaded files. This is because downloading a file isn’t considered
+ an important aspect of emulating user interaction with the web platform.
+ Instead, find the link using Selenium (and any required cookies) and
+ pass it to a HTTP request library like libcurl.
 
 <h2>HTTP Response Codes</h2>
 
