--- a/drivers.html
+++ b/drivers.html
@@ -13,3 +13,9 @@
 
 
 <h2>Driver specific capabilities</h2>
+
+<h3>Internet Explorer</h3>
+<h4>fileUploadDialogTimeout</h4>
+<p>In some environments, Internet Explorer may timeout when opening the
+ File Upload dialog. IEDriver has a default timeout of 1000ms, but you
+ can increase the timeout using the fileUploadDialogTimeout capability.
