Added favicon to page head

--- a/attr.html
+++ b/attr.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 <link href=se.css rel=stylesheet>
 <link href=java.html rel=prev title="The Java Support Package">
 <link href=typo.html rel=next title="Typographical Conventions">
