--- a/ide.html
+++ b/ide.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Selenium IDE</title>
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=start.html title="Getting Started">
 <link rel=next href=remote.html title="Remote WebDriver">
