--- a/remote.html
+++ b/remote.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Remote WebDriver</title>
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=wd.html title=WebDriver>
 <link rel=next href=best.html title="Best Practices">
