--- a/typo.html
+++ b/typo.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Typographical Conventions</title>
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=attr.html title="Copyright and Attributions">
 <script src=docs.js></script>
