--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Selenium Documentation</title>
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 <link href=se.css rel=stylesheet>
 <link href=quick.html rel=next title="Quick Tour">
 <script src=docs.js></script>
