--- a/java.html
+++ b/java.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>The Java Support Package</title>
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=drivers.html title="Driver Idiosyncracies">
 <link rel=next href=attr.html title="Copyright and Attributions">
