--- a/worst.html
+++ b/worst.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Worst Practices</title>
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=best.html title="Best Practices">
 <link rel=next href=grid.html title=Grid>
