Relative href to favicon

--- a/install.html
+++ b/install.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Installation</title>
-<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=intro.html title=Introduction>
 <link rel=next href=start.html title="Getting Started">
