--- a/quick.html
+++ b/quick.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Quick Tour</title>
-<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=index.html title="Table of Contents">
 <link rel=next href=intro.html title=Introduction>
