--- a/drivers.html
+++ b/drivers.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Driver Idiosyncrasies</title>
-<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=grid.html title=Grid>
 <link rel=next href=java.html title="The Java Support Package">
