attr, index: regenerate

--- a/attr.html
+++ b/attr.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
-<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-<link href=se.css rel=stylesheet>
-<link href=java.html rel=prev title="The Java Support Package">
-<link href=typo.html rel=next title="Typographical Conventions">
+<link rel=icon type="image/vnd.microsoft.icon" href=favicon.ico>
+<link rel="shortcut icon" type="image/vnd.microsoft.icon" href=favicon.ico>
+<link rel=stylesheet href=se.css>
+<link rel=prev title="The Java Support Package" href=java.html>
+<link rel=next title="Typographical Conventions" href=typo.html>
 <script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
@@ -36,12 +36,20 @@
  <li><a href=mailto:bizob2828@yahoo.com>Bob Evans</a>
  <li><a href=mailto:botalov.andrey@gmail.com>Andrey Botalov</a>
  <li><a href=mailto:brknthmb@gmail.com>Dan Chan</a>
+ <li><a href=mailto:bryangordon@Bryans-MacBook-Pro.local>Bryan Gordon</a>
  <li><a href=mailto:danforkosh@yahoo.com>sheg</a>
  <li><a href=mailto:daniel.jj.davison@gmail.com>Daniel Davison</a>
+ <li><a href=mailto:daniel.jj.davison@gmail.com>Dj</a>
  <li><a href=mailto:dave.hunt@gmail.com>Dave Hunt</a>
+ <li><a href=mailto:dennybiasiolli@users.noreply.github.com>Denny Biasiolli</a>
  <li><a href=mailto:djangofan@gmail.com>djangofan</a>
  <li><a href=mailto:djangofan@gmail.com>Jon Thor Austen</a>
+ <li><a href=mailto:donhuvy@hotmail.com>Do Nhu Vy</a>
  <li><a href=mailto:gavin@agmen2.co.uk>agmen</a>
+ <li><a href=mailto:geth1b@outlook.com>yang458567</a>
+ <li><a href=mailto:hardin.brett@gmail.com>Brett Hardin</a>
+ <li><a href=mailto:hazmeister@gmail.com>Harry King</a>
+ <li><a href=mailto:hazmeister@gmail.com>Hazmeister</a>
  <li><a href=mailto:hking@shutterfly.com>hking-shutterfly</a>
  <li><a href=mailto:hoanluu@yahoo.com>hoanluu</a>
  <li><a href=mailto:incubusattax@gmail.com>DirtyMoney</a>
@@ -56,11 +64,16 @@
  <li><a href=mailto:mmerrell@whalesharkmedia.com>Marcus Merrell</a>
  <li><a href=mailto:natrezek@gmail.com>NRezek</a>
  <li><a href=mailto:nicegraham@gmail.com>Graham Abell</a>
+ <li><a href=mailto:nikai@nikai.net>Nicolas Kaiser</a>
  <li><a href=mailto:oriekenjr@gmail.com>Oscar Rieken</a>
+ <li><a href=mailto:picimako@gmail.com>Tamas Balog</a>
  <li><a href=mailto:rivlin.pereira@gmail.com>Rivlin</a>
  <li><a href=mailto:santiycr@gmail.com>Santiago Suarez OrdoÃ±ez</a>
+ <li><a href=mailto:tarun.kumar.bhadauria@zalando.de>tarun</a>
+ <li><a href=mailto:tarun.kumar.bhadauria@zalando.de>Tarun Kumar</a>
  <li><a href=mailto:whhone@gmail.com>Wai Hon Law</a>
  <li><a href=mailto:xrobotika@yahoo.com>xrobotika</a>
+ <li><a href=mailto:yariv.amar@gmail.com>Yariv Amar</a>
  <li><a href=mailto:zabostz@gmail.com>Zbigniew Z</a>
  <li><a href=mailto:zcampbell@mozilla.com>Zac Campbell</a>
  <li><a href=mailto:zeljko.filipin@gmail.com>Å½eljko Filipin</a>
@@ -69,36 +82,36 @@
 
 <p>Third-Party Software used by Selenium documentation project:
 <table>
- <tr><th>Software</th> <th>Version</th> <th>License</th></tr>
+ <tr><th>Software</th> <th>Version</th> <th>License</tr>
  <tr>
    <td><a href="https://github.com/isagalaev/highlight.js">Highlight.js</a></td>
    <td>9.7.0</td>
-   <td><a href="https://github.com/isagalaev/highlight.js/blob/master/LICENSE">BSD License</a></td></tr>
+   <td><a href="https://github.com/isagalaev/highlight.js/blob/master/LICENSE">BSD License</a></tr>
 </table>
 
 
 <h2>HTML Version and Source Code</h2>
 
 <p>An HTML version of this documentation is freely available from
- <a href=//seleniumhq.github.io/docs>https://seleniumhq.github.io/docs</a>.
+ <a href="//seleniumhq.github.io/docs">https://seleniumhq.github.io/docs</a>.
 
 <p>The source code for the examples included,
  and for the book itself is available from the Selenium documentation repository
- at <a href=//github.com/seleniumhq/docs>https://github.com/seleniumhq/docs</a>.
+ at <a href="//github.com/seleniumhq/docs">https://github.com/seleniumhq/docs</a>.
  See instructions on how to check out the code via git at
- <a href=//help.github.com/articles/fetching-a-remote/>https://help.github.com/articles/fetching-a-remote/</a>.
+ <a href="//help.github.com/articles/fetching-a-remote/">https://help.github.com/articles/fetching-a-remote/</a>.
 
 
 <h2>License</h2>
 
 <p>All code and documentation originating from the Selenium project
  is licensed under the Apache 2.0 license,
- with the <a href=//sfconservancy.org/>Software Freedom Conservancy</a>
+ with the <a href="//sfconservancy.org/">Software Freedom Conservancy</a>
  as the copyright holder.
 
 <p>The license is included here for convenience,
  but you can also find it on the
- <a href=//apache.org/licenses/LICENSE-2.0.html>Apache Foundation's websites</a>:
+ <a href="//apache.org/licenses/LICENSE-2.0.html">Apache Foundation's websites</a>:
 
 <p><pre>                                 Apache License
                            Version 2.0, January 2004
