--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Selenium Documentation</title>
-<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-<link href=se.css rel=stylesheet>
-<link href=quick.html rel=next title="Quick Tour">
+<link rel=icon type="image/vnd.microsoft.icon" href=favicon.ico>
+<link rel="shortcut icon" type="image/vnd.microsoft.icon" href=favicon.ico>
+<link rel=stylesheet href=se.css>
+<link rel=next title="Quick Tour" href=quick.html>
 <script src=docs.js></script>
 
 <body class=front>
@@ -16,7 +16,7 @@
 <p>It provides extensions to emulate user interaction with browsers,
  a distribution server for scaling browser allocation,
  and the infrastructure for implementations of the
- <a href=//www.w3.org/TR/webdriver/>W3C WebDriver specification</a>
+ <a href="//www.w3.org/TR/webdriver/">W3C WebDriver specification</a>
  that lets you write interchangeable code for all major web browsers.
 
 <p>The project is made possible by volunteer contributors
@@ -61,8 +61,7 @@ search_box.submit()</code></pre>
  <li><a href=quick.html#quick_tour>Quick Tour</a>
   <ul>
    <li><a href=quick.html#webdriver>WebDriver</a>
-   <li><a href=quick.html#selenium_remote_control>Selenium Remote
-   Control</a>
+   <li><a href=quick.html#selenium_remote_control>Selenium Remote Control</a>
    <li><a href=quick.html#selenium_ide>Selenium IDE</a>
    <li><a href=quick.html#selenium_grid>Selenium Grid</a>
   </ul></li>
@@ -84,10 +83,16 @@ search_box.submit()</code></pre>
    <li><a href=intro.html#about_this_documentation>About This Documentation</a>
   </ul></li>
  <li><a href=install.html#selenium_installation>Selenium Installation</a>
+  <ul>
+   <li><a href=install.html#using_browser_specific_jar>Using browser specific JAR</a>
+   <li><a href=install.html#using_non_browser_specific_jar>Using non browser specific JAR</a>
+   <li><a href=install.html#using_standalone_jar>Using standalone JAR</a>
+  </ul></li>
  <li><a href=start.html#getting_started_with_webdriver>Getting Started With WebDriver</a>
   <ul>
    <li><a href=start.html#consumer_browsers>Consumer Browsers</a>
    <li><a href=start.html#specialized_browsers>Specialized Browsers</a>
+   <li><a href=start.html#other_third_party_drivers_and_plugins>Other third party drivers and plugins</a>
    <li><a href=start.html#locating_elements>Locating Elements</a>
    <li><a href=start.html#performing_actions_on_the_aut>Performing Actions on the AUT</a>
   </ul></li>
@@ -98,6 +103,10 @@ search_box.submit()</code></pre>
    <li><a href=wd.html#waits>Waits</a>
    <li><a href=wd.html#support_classes>Support Classes</a>
    <li><a href=wd.html#http_proxies>HTTP Proxies</a>
+   <li><a href=wd.html#page_load_strategy>Page Load Strategy</a>
+   <li><a href=wd.html#webelement>WebElement</a>
+   <li><a href=wd.html#keyboard>Keyboard</a>
+   <li><a href=wd.html#mouse>Mouse</a>
   </ul></li>
  <li><a href=remote.html#remote_webdriver>Remote WebDriver</a>
   <ul>
@@ -140,7 +149,9 @@ search_box.submit()</code></pre>
  <li><a href=java.html#the_java_support_package>The Java Support Package</a>
   <ul>
    <li><a href=java.html#working_with_colours>Working With Colours</a>
-   <li><a href=java.html#working_with_select_elements>Working With Select Elements</a>
+   <li><a href=java.html#working_with>Working With</a>
+   <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and Keyboard actions in detail</a>
+   <li><a href=java.html#working_with_webelements>Working with WebElements</a>
   </ul></li>
 </ul>
 </div>
