index: the docs are part of the project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <a href="//www.w3.org/TR/webdriver/">W3C WebDriver specification</a>
  that lets you write interchangeable code for all major web browsers.
 
-<p>The project is made possible by volunteer contributors
+<p>This project is made possible by volunteer contributors
  who have put in thousands of hours of their own time,
  and made the source code <a href=attr.html#license>freely available</a>
  for anyone to use, enjoy, and improve.
