index: break text sensibly

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
  to teach and nurture the community.
 
 <p>At the core of Selenium is <em><a href=wd.html>WebDriver</a></em>,
- an interface to write instruction sets that can be run interchangeably in many browsers.
+ an interface to write instruction sets
+ that can be run interchangeably in many browsers.
  Here is one of the simplest instructions you can make:
 
 <!-- TODO(ato): We should find a better example.  Perhaps Todo list? -->
@@ -43,12 +44,14 @@ search_box.send_keys("cheese")
 search_box.submit()</code></pre>
 
 <p>See the <em><a href=quick.html>Quick Tour</a></em>
- for a full explanation of what goes on behind the scenes when you run this code.
+ for a full explanation
+ of what goes on behind the scenes when you run this code.
  You should continue on to the <a href=#narrative>narrative documentation</a>
  to understand how you can <a href=install.html>install</a> and
- successfully use Selenium as a test automation tool, and
- scaling simple tests like this to run in large, distributed environments
- on multiple browsers, under several different operating systems.
+ successfully use Selenium as a test automation tool,
+ and scaling simple tests like this to run
+ in large, distributed environments on multiple browsers,
+ on several different operating systems.
 
 
 <h2>Getting Started</h2>
